# src/routes/index.js
@@ -9,8 +9,4 @@ router.use("/", animalRouter);
 router.use("/", installRouter);
 router.use("/auth", authRouter);
 
-router.get("/install", async (req, res) => {
-  res.json({ message: "Install route" });
-});
-
 module.exports = router;
